Adding Meta Tags

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 <!--<![endif]-->
                 <head>
                     <meta charset="utf-8">
-                    <title></title>
-                    <meta name="description" content="">
-                    <meta name="author" content="">
+                    <title>William J. Perconti - Classical Saxophonist</title>
+                    <meta name="description" content="William J. Perconti - Classical Saxophonist - Artist, Musician, Saxaphone, Classical, Jazz, Music">
+                    <meta name="author" content="William J. Perconti - Classical Saxophonist">
                     <!-- /ht Andy Clarke - http://front.ie/lkCwyf -->
                     <meta http-equiv="cleartype" content="on">
                     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
