--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <!-- /ht Paul Irish - http://front.ie/j5OMXi -->
-<!--[if lt IE 7 ]> 
+<!--[if lt IE 7 ]>
 <html class="no-js ie6" lang="en">
     <![endif]-->
-    <!--[if IE 7 ]>    
+    <!--[if IE 7 ]>
     <html class="no-js ie7" lang="en">
         <![endif]-->
-        <!--[if IE 8 ]>    
+        <!--[if IE 8 ]>
         <html class="no-js ie8" lang="en">
             <![endif]-->
-            <!--[if (gte IE 9)|!(IE)]><!--> 
+            <!--[if (gte IE 9)|!(IE)]><!-->
             <html class="no-js" lang="en">
                 <!--<![endif]-->
                 <head>
@@ -43,10 +43,10 @@
                         <br><br>
                         <div id="main" role="main" class="cf">
                             <p>Bill Perconti’s life-long exploration of classical saxophone has placed him among the most-recorded classical saxophonists in the history of the instrument.  He has recorded over 30 world-premiers on 13 recordings since 1994 as a soloist and leader of the <i>Alloy Saxophone Quartet, the LCSC Chamber Players</i>, and the <i>Idaho Saxophone Trio</i>.  Perconti’s six solo/ensemble CDs are with the leading independent record companies Albany, Centaur, and Crystal Records.  Perconti also contributed to six volumes on the Arizona University Recording series <i>America’s Millennium Tribute to Adolphe Sax</i> and to <i>Volume IX of The Chamber Music of Nancy Van de Vate</i> on Vienna Modern Masters Recordings.  </p>
-                            <aside> 
-                                <img src="./images/5-Bill%20Perconti.jpg" alt="" /> 
+                            <aside>
+                                <img src="./images/5-Bill%20Perconti.jpg" alt="" />
                             </aside>
-                            <p>He has recorded with pianists James March (Morningside College, IA) and Kay Zavislak (Western Washington U.), guitarists James Reid (U. of Idaho) and Paul Grove (Gonzaga U.), vocalist Martha Sheil (U. of MI), bassist Pat McNally (Spokane Symphony), and the U. of Iowa Brass Quintet.  Currently Perconti is soprano saxophonist with the Pacific NW-based <i>Alloy Saxophone Quartet</i> that includes professional saxophonists Sean Fredenberg, Duke Sullivan, and Erik Steighner.</p>
+                            <p>He has recorded with pianists James March (Morningside College, IA) and Kay Zavislak (Western Washington U.), guitarists James Reid (U. of Idaho) and Paul Grove (Gonzaga U.), vocalist Martha Sheil (U. of MI), bassist Pat McNally (Spokane Symphony), and the U. of Iowa Brass Quintet.  Currently Perconti is soprano saxophonist with the Pacific NW-based <i>Alloy Saxophone Quartet</i> that includes professional saxophonists Sean Fredenburg, Duke Sullivan, and Erik Steighner.</p>
                             <p>Accomplishing many “firsts” for classical saxophone, Perconti’s 2014 album <a href="http://www.amazon.com/Single-Reed-William-Perconti/dp/B00OA389LK">Single Reed</a> is the first CD that contains recordings on five saxophones, SATBBs.  His CD <a href="http://www.allmusic.com/album/women-composers-and-their-music-for-saxophone-mw0002500896">Women Composers and Their Music for Saxophone</a> is also the first of it’s kind for classical saxophone.</p>
                             <p style="max-width: 70em">In a review of Perconti’s album <a href="http://www.amazon.com/Dragon-William-Perconti/dp/B00F3BR0KO">Dragon</a>, Fanfare wrote “well played by Perconti and the Alloy Saxophone Quartet”, and of the CD <a href="http://www.allmusic.com/album/alto-saxophone-duo-1-point-5-mw0000930162">Duo 1 point 5</a> “ . . . the young American virtuoso Bill Perconti is an accomplished interpret”.  From <i>American Record Guide</i> “I would be happy to spend an evening in the concert hall with Bill Perconti.”  The <i>Bossak-Heilbron Foundation</i>, the <i>Idaho Commission on the Arts</i> (with pianist Kay Zavislak), <i>Lewis-Clark State College</i>, the <i>Massachusetts Institute of Technology</i> (with composer Elena Ruehr), the <i>National Endowment for the Arts</i>, and the <i>Washington Artists Trust</i> have provided grants for his recordings.</p>
                             <p style="max-width: 70em">Perconti’s performing career spans 14 states nationwide (USA), Canada, and Japan, including among other guest recitals the U. of Illinois Champaign-Urbana and the U. of Wisconsin-Madison.  Academic performances include solos at state, regional, and national meetings of the <i>North American Saxophone Alliance</i> and the <i>World Saxophone Congress</i> (Tokyo).  Perconti is also a two-time winner of Outstanding Soloist Certificates at the Hampton Jazz Festival, where the LCSC Band under Perconti’s direction was also a nine-time winner of <i>Outstanding Band</i> and <i>Adjudicator’s Choice</i> awards.</p>
@@ -54,6 +54,6 @@
                             <p style="max-width: 70em">Perconti is found in the 7th Ed. of <i>Marquis Who’s Who in America</i> and <i>Who’s Who in the West</i>, 27th Ed.  His teachers include Joseph Bosoty, Louis Marini Sr., Galan Kral, and Ronald Tyree.  Perconti has taught as a faculty member at Central Missouri State U., Coe College (IA), Lewis-Clark State College, and St. Cloud State U.</p>
                             <p style="max-width: 70em">With his wife Ellen, Bill Perconti lives an active outdoor recreational life in the Pacific NW.  His family life included coaching youth sports, having raised two children, both of whom are college graduates and NCAA athletes.  </p>
                     </article>
-                    </div><!-- /container -->      
+                    </div><!-- /container -->
                 </body>
             </html>
