Typo and Contact

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- /ht Paul Irish - http://front.ie/j5OMXi -->
 <!--[if lt IE 7 ]>
 <html class="no-js ie6" lang="en">
     <![endif]-->
@@ -54,6 +53,9 @@
                             <p style="max-width: 70em">Perconti is found in the 7th Ed. of <i>Marquis Who’s Who in America</i> and <i>Who’s Who in the West</i>, 27th Ed.  His teachers include Joseph Bosoty, Louis Marini Sr., Galan Kral, and Ronald Tyree.  Perconti has taught as a faculty member at Central Missouri State U., Coe College (IA), Lewis-Clark State College, and St. Cloud State U.</p>
                             <p style="max-width: 70em">With his wife Ellen, Bill Perconti lives an active outdoor recreational life in the Pacific NW.  His family life included coaching youth sports, having raised two children, both of whom are college graduates and NCAA athletes.  </p>
                     </article>
+                    <hr>
+                    <center>Contact:  wjperconti (at) lcsc.edu</center>
+                    <hr>
                     </div><!-- /container -->
                 </body>
             </html>
